# clox

./: .gitignore  CMakeLists.txt  compile_commands.json  flake.nix
src/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  scanner.c  scanner.h  value.c  value.h  vm.c  vm.h
src/.cache/clangd/index/: chunk.h.2D38E4B7351E3AC1.idx  common.h.96B8AAB411E1DE46.idx  main.c.FC7EEC0279D9380A.idx
